--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "geopandas>=1.0.1",
     "ipykernel>=6.29.5",
+    "matplotlib>=3.10.3",
+    "polyline>=2.0.2",
     "requests>=2.32.3",
+    "shapely>=2.1.0",
 ]
